--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -1,6 +1,16 @@
 <h2>Edit Historical Landmark</h2>
 
-<!-- add content here -->
+<form action="/landmarks/<%=@landmark.id%>" method="POST">
+    <label for="landmark_name">Name</label>
+    <br>
+    <input id="name" type="text" name="landmark[name]" value=<%=@landmark.name%>>
+    <br>
+    <label for="landmark_year_completed">Year Completed</label>
+    <br>
+    <input id="year_completed" type="text" name="landmark[year_completed]" value=<%=@landmark.year_completed%>>
+    <br>
+    <input type="sumbit" value="Edit Landmark">
+</form>
 
 <a class="button" href="/landmarks">Landmarks</a>
 <a class="button" href="/">Home</a>
